# scopeward

./: .gitignore  Dockerfile  Makefile  README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml
demos/: 01_sign_and_verify.py  02_authorized_action.py  03_denied_reason_codes.py  04_capability_ladder.py  05_revocation_midengagement.py  06_expiry.py  07_tamper_detection.py  08_sarif_export.py  09_schema_validation.py  _common.py  run_all.py
docs/: ARCHITECTURE.md  REASON_CODES.md  SARIF.md  SCHEMA.md
examples/: engagement.example.json  help.txt
schema/: scope.schema.json
scopeward/: __init__.py  authz.py  cli.py  evidence.py  findings.py  grants.py  masvs.py  reasons.py  revocation.py  sarif.py  schema.py  scope.py  signing.py
tests/: conftest.py  test_authz.py  test_authz_reasons.py  test_cli.py  test_evidence.py  test_evidence_extra.py  test_findings.py  test_grants.py  test_masvs.py  test_reasons.py  test_revocation.py  test_sarif.py  test_schema.py  test_scope.py  test_signing.py
